--- a/app/src/main/res/layout/activity_gantt.xml
+++ b/app/src/main/res/layout/activity_gantt.xml
@@ -47,203 +47,206 @@
 
     </LinearLayout>
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
-        tools:layout_editor_absoluteX="0dp">
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/stroke"
-                android:layout_width="120dp"
-                android:layout_height="40dp"
-                android:layout_weight="1"
-                android:padding="2dp"
-                android:background="@drawable/borderline">
-
-                <TextView
-                    android:id="@+id/textView27"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="月份"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/textView28"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="議題"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rcv_ganttIssue"
-                android:layout_width="120dp"
-                android:layout_height="match_parent"
-                android:layout_weight="15" />
-        </LinearLayout>
-
-        <HorizontalScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="150"
-            android:background="@drawable/borderline">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/stroke"
+                    android:layout_width="120dp"
+                    android:layout_height="40dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/borderline"
+                    android:padding="2dp">
+
+                    <TextView
+                        android:id="@+id/textView27"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="月份"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/textView28"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="議題"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rcv_ganttIssue"
+                    android:layout_width="120dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="15" />
+            </LinearLayout>
+
+            <HorizontalScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="150"
                 android:background="@drawable/borderline">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="40dp"
-                    android:layout_weight="1"
-                    android:orientation="horizontal"
-                    android:background="@drawable/borderline">
-
-                    <TextView
-                        android:id="@+id/textView22"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:layout_weight="1"
-                        android:text="一月"
-                        android:textAlignment="center"
-                        android:textSize="11sp"
-                        android:background="@drawable/borderline"/>
-
-                    <TextView
-                        android:id="@+id/textView23"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:layout_weight="1"
-                        android:text="二月"
-                        android:textAlignment="center"
-                        android:textSize="11sp"
-                        android:background="@drawable/borderline"/>
-
-                    <TextView
-                        android:id="@+id/textView24"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:layout_weight="1"
-                        android:text="三月"
-                        android:textAlignment="center"
-                        android:textSize="11sp"
-                        android:background="@drawable/borderline"/>
-
-                    <TextView
-                        android:id="@+id/textView25"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:layout_weight="1"
-                        android:text="四月"
-                        android:textAlignment="center"
-                        android:textSize="11sp"
-                        android:background="@drawable/borderline"/>
-
-                    <TextView
-                        android:id="@+id/textView26"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:layout_weight="1"
-                        android:text="五月"
-                        android:textAlignment="center"
-                        android:textSize="11sp"
-                        android:background="@drawable/borderline"/>
-
-                    <TextView
-                        android:id="@+id/textView15"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:layout_weight="1"
-                        android:text="六月"
-                        android:textAlignment="center"
-                        android:textSize="11sp"
-                        android:background="@drawable/borderline"/>
-
-                    <TextView
-                        android:id="@+id/textView16"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:layout_weight="1"
-                        android:text="七月"
-                        android:textAlignment="center"
-                        android:textSize="11sp"
-                        android:background="@drawable/borderline"/>
-
-                    <TextView
-                        android:id="@+id/textView17"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:layout_weight="1"
-                        android:text="八月"
-                        android:textAlignment="center"
-                        android:textSize="11sp"
-                        android:background="@drawable/borderline"/>
-
-                    <TextView
-                        android:id="@+id/textView18"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:layout_weight="1"
-                        android:text="九月"
-                        android:textAlignment="center"
-                        android:textSize="11sp"
-                        android:background="@drawable/borderline"/>
-
-                    <TextView
-                        android:id="@+id/textView19"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:layout_weight="1"
-                        android:text="十月"
-                        android:textAlignment="center"
-                        android:textSize="11sp"
-                        android:background="@drawable/borderline"/>
-
-                    <TextView
-                        android:id="@+id/textView20"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:layout_weight="1"
-                        android:text="十一月"
-                        android:textAlignment="center"
-                        android:textSize="11sp"
-                        android:background="@drawable/borderline"/>
-
-                    <TextView
-                        android:id="@+id/textView21"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:layout_weight="1"
-                        android:text="十二月"
-                        android:textAlignment="center"
-                        android:textSize="11sp"
-                        android:background="@drawable/borderline"/>
-                </LinearLayout>
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rcv_ganttMonth"
-                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="15"
-                    android:background="@drawable/borderline"/>
+                    android:background="@drawable/borderline"
+                    android:orientation="vertical">
 
-            </LinearLayout>
-        </HorizontalScrollView>
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="40dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/borderline"
+                        android:orientation="horizontal">
 
-    </LinearLayout>
+                        <TextView
+                            android:id="@+id/textView22"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/borderline"
+                            android:text="一月"
+                            android:textAlignment="center"
+                            android:textSize="11sp" />
+
+                        <TextView
+                            android:id="@+id/textView23"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/borderline"
+                            android:text="二月"
+                            android:textAlignment="center"
+                            android:textSize="11sp" />
+
+                        <TextView
+                            android:id="@+id/textView24"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/borderline"
+                            android:text="三月"
+                            android:textAlignment="center"
+                            android:textSize="11sp" />
+
+                        <TextView
+                            android:id="@+id/textView25"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/borderline"
+                            android:text="四月"
+                            android:textAlignment="center"
+                            android:textSize="11sp" />
+
+                        <TextView
+                            android:id="@+id/textView26"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/borderline"
+                            android:text="五月"
+                            android:textAlignment="center"
+                            android:textSize="11sp" />
+
+                        <TextView
+                            android:id="@+id/textView15"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/borderline"
+                            android:text="六月"
+                            android:textAlignment="center"
+                            android:textSize="11sp" />
+
+                        <TextView
+                            android:id="@+id/textView16"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/borderline"
+                            android:text="七月"
+                            android:textAlignment="center"
+                            android:textSize="11sp" />
+
+                        <TextView
+                            android:id="@+id/textView17"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/borderline"
+                            android:text="八月"
+                            android:textAlignment="center"
+                            android:textSize="11sp" />
+
+                        <TextView
+                            android:id="@+id/textView18"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/borderline"
+                            android:text="九月"
+                            android:textAlignment="center"
+                            android:textSize="11sp" />
+
+                        <TextView
+                            android:id="@+id/textView19"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/borderline"
+                            android:text="十月"
+                            android:textAlignment="center"
+                            android:textSize="11sp" />
+
+                        <TextView
+                            android:id="@+id/textView20"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/borderline"
+                            android:text="十一月"
+                            android:textAlignment="center"
+                            android:textSize="11sp" />
+
+                        <TextView
+                            android:id="@+id/textView21"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/borderline"
+                            android:text="十二月"
+                            android:textAlignment="center"
+                            android:textSize="11sp" />
+                    </LinearLayout>
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rcv_ganttMonth"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="15"
+                        android:background="@drawable/borderline" />
+
+                </LinearLayout>
+            </HorizontalScrollView>
+        </LinearLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
